--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -10,3 +10,10 @@
 a:visited {
      color: #FF8F00;
 }
+a:hover{
+     color:  #FF8F00 !important;
+}
+a:link{
+     color:  #FF8F00 !important;
+   
+}
