--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,9 @@
-<h2>
-<%= @article.title%>
-</h2>
+<div class="container">
+    <h2 class="text-info">
+        <%= @article.title%>
+    </h2>
 
-<div>
-     <%= @article.content %>
- </div>
+    <div>
+        <%= @article.content %>
+    </div>
+</div>
