--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,23 @@
 <%# <%= @articles.inspect%>
-<% @articles.each do |item| %>
- <h1>
- <%=item.title%>
- </h1>
 
- <div>
-     <%=item.content%>
+    <% @articles.each do |article| %>
+<div class="container">
+    <div >
+    <h3 class="text-info"><%=link_to article.title, article%> </h3>
+    </div>
+    
+     <%=article.content%><br>
+    <p class="btn btn-secondary"><%= link_to "Eliminar Post", article, method: :delete%></p>
+    <p class="btn btn-secondary"><%= link_to "Editar Post", edit_article_path(article)%></p>
+
+    </div>
+    <br><hr><br>
+    <% end %>   
 </div>
-<% end %>
+
+    
+
+
 
 
 <%# inspect es metodo que permite inspeccionar un objeto %>
