--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,48 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container col-md-4 text-center">
+      <h2 class="text-info">Editar mi cuenta <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <%= f.email_field :email, autofocus: true, class: "form-control" %>
+  </div><br>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.label "Contraseña" %> <i>(Dejalo vacio si no quieres cambiarla)</i><br />
+    <%= f.password_field :password, autocomplete: "off", class: "form-control"%>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <em><%= @minimum_password_length %> caracteres como minimo</em>
     <% end %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <%= f.label "Confirma tu contraseña" %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off",class: "form-control" %>
+  </div> <br>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
+    <%= f.label "Contraseña actual" %> <i>(Necesitamos tu contraseña actual para confirmar los cambios)</i><br />
+    <%= f.password_field :current_password, autocomplete: "off", class: "form-control"%>
+  </div><br>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Actualizar", class: "btn btn-secondary" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+  <div class="jumbotron">
+    <h3 class="text-info">Cancelar mi cuenta</h3>
 
-<p>Unhappy? <%= button_to "Cancelar mi cuenta", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+    <p>¿No estas satisfecho? <%= button_to "Cancelar mi cuenta", registration_path(resource_name), data: { confirm: "¿Estas seguro?" }, method: :delete, class:"btn btn-warning" %></p>
 
-<%= link_to "Back", :back %>
+    <%= link_to "Back", :back, class:"btn btn-primary" %>
+
+  </div>
+</div>
