--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Lobster');
 .be-red{
      background-color: #3F5866;
 }
 
 .white{
      color: #FF8F00;
+}
+h1{
+     font-family: 'Lobster', cursive;
 }
 
 a:visited {
