--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,32 @@
 <div class="container">
     <h2 class="text-info">
         <%= @article.title%>
+    </h2>
+    <div class="container">
         <p class="btn btn-secondary"><%= link_to "Eliminar Post", @article, method: :delete%></p>
         <p class="btn btn-secondary"><%= link_to "Editar Post", edit_article_path(@article)%></p>
+    </div>
+     <% unless @article.user.nil? || @article.visits.nil? %>
+            <p> Escrito por: <%= @article.user.email%> </p><br>
+            
+    <% end %>
+    <p> Visitas: <%= @article.visits%> </p>
 
-    </h2>
 
     <div>
         <%= @article.content %>
+    </div>
+    <hr>
+    <div>
+        <h2 class="text-info">Comentarios</h2>
+        <%= render 'comments/form' %>
+        <ul>
+        <% @article.comments.each do |comment|%>
+            <li><%=comment.body%> -<%=comment.user.email%></li>
+            <% if current_user.email == comment.user.email %>
+                 <%#= link_to "Editar",comment, method: :edit%>
+            <% end %>
+        <%end%>
+        </ul>
     </div>
 </div>
