--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@article, @comment]) do |f| %>
+<%= form_for([@article, @comment], remote: true) do |f| %>
   <% if @comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.text_area :body, class:"form-control", placeholder:"Deja tu comentario sobre este post" %>
+    <%= f.text_area :body, class:"form-control", placeholder:"Deja tu comentario sobre este post..." %>
   </div>
 
   <div class="actions">
