--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <%# <%= @articles.inspect%>
  <div class="jumbotron text-center">
-        <h5> <%=link_to "Publicar Articulo", new_article_path, class:"btn btn-secondary"%></h5>
+    <h5> <%=link_to "Publicar Articulo", new_article_path, class:"btn btn-secondary"%></h5>
     </div>
     <% @articles.each do |article| %>
 <div class="container">
@@ -10,8 +10,23 @@
     </div>
     
      <%=article.content%><br>
+     
+     <% if article.comments.count >1 %>
+     <p class="btn btn-sm btn-secondary">  <%= article.comments.count%>  comentarios</p>
+     <% end %>
+    <% if article.comments.count ==1 %>
+     <p class="btn btn-sm btn-secondary">  <%= article.comments.count%>  comentario</p>
+     <% end %>
+     <% if article.comments.count ==0 %>
+     <p class="text-muted">  Este articulo no tiene comentarios aún, ¡sé el primero en comentar!</p>
+     <% end %>
+     
+     
+      
+     
 
     </div>
+    
     <br><hr><br>
     <% end %>   
 </div>
