--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -16,6 +16,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Comentar!!!", class: "btn btn-secondary" %>
+    <%= f.submit "Comentar!!!",remote: true, class: "btn btn-secondary" %>
   </div>
 <% end %>
