--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster');
-.be-red{
+.navcolor{
      background-color: #3F5866;
 }
 
-.white{
+.orange{
      color: #FF8F00;
 }
-h1{
-     font-family: 'Lobster', cursive;
+.title{
+     color: #3F5866 !important;
 }
+
 
 a:visited {
      color: #FF8F00;
@@ -17,6 +18,5 @@ a:hover{
      color:  #FF8F00 !important;
 }
 a:link{
-     color:  #FF8F00 !important;
-   
+     color:  #FF8F00 ;
 }
