--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2 class="text-info">
+    <h2 class="title">
         <%= @article.title%>
     </h2>
     <div class="container">
