--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,53 @@
-Hola
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<div class="container">
+     <%# <script>
+          $(document).ready(function () {
+               alert("bienvenido");
+          })
+     </script> %>
+     <% if !user_signed_in? %>
+          <div class="row ">
+          <div class="col-md-8 text-center">
+               <h2 class="title">Bienvenido!!! Disfruta de la experiencia de compartir tus ideas, y conocer las opiniones de los demás.<h2>
+                    <div class="fa">
+                         <div class="card center-block" style="width: 18rem;">
+                              <img class="card-img-top" src="http://naturexpark.com/media/k2/items/cache/feb4274796d93ff716e9650163a77fb8_L.jpg" alt="Card image cap">
+                              <div class="card-body">
+                                   <h4 class="card-text title">Crea tu cuenta en tan solo unos segundos!!</h4>
+                              </div>
+                         </div>
+                    </div>
+          </div>
+
+          <div class="col-md-4 text-center">
+             <h2 class="title font-italic">Actualmente <span class="orange"><%= @users.count%></span>  usuarios se han unido a nuestra comunidad</h2>
+             <h3 class=" orange"> Registrate ahora!!</h3>
+          </div>
+          </div>
+     <% else %>
+     <div class="row ">
+          <div class="col-md-8 text-center ">
+               <h2 class="title">Bienvenido!!! Disfruta de la experiencia de compartir tus ideas, y conocer las opiniones de los demás.<h2>
+               <div class="fa">
+                    <div class="card" style="width: 18rem;">
+                         <img class="card-img-top" src="https://congdongdigitalmarketing.com/wp-content/uploads/2017/09/Content-viral-696x374.jpg" alt="Card image cap">
+                         <div class="card-body">
+                              <h4 class="card-text title">Encuentra nuevos puntos de vista!!</h4>
+                         </div>
+                    </div>
+               </div>
+               
+          </div>
+
+          <div class="col-md-4 text-center">
+               <h2 class="title font-italic">Hasta ahora se han publicado <span class="orange"><%= @articles.count%> </span> articulos, te invitamos a que publiques el articulo  numero <%= @articles.count + 1%> </h2>
+             <h3 class=" orange"> Publicalo ahora!!</h3>
+
+          </div>
+
+
+     
+     </div>
+
+     <% end %>
+</div>
