--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
   </head>
 
 <body>
-  <nav class="be-red white">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <nav class="navcolor orange">
     <ul class="navbar"> 
       <h2 class="navbar"><%= link_to "Inicio", root_path%></h2>
       <h5 class="navbar"><%= link_to "Articulos", articles_path%></h5>
@@ -37,12 +39,45 @@
   <p class="alert alert-danger"><%= alert %></p>
 <% end %>
 
-
-
-
 <%# para configuracion inicial de devise %>
-
-
     <%= yield %>
+
+    <!-- Footer -->
+<footer class="page-footer font-small special-color-dark pt-4 title">
+
+    <!-- Footer Elements -->
+    <div class="container">
+
+      <!-- Social buttons -->
+      <ul class="list-unstyled list-inline text-center">
+        <li class="list-inline-item">
+          <a class="btn-floating btn-fb mx-1">
+            <i class="fa fa-facebook"> </i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-tw mx-1">
+            <i class="fa fa-twitter"> </i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-gplus mx-1">
+            <i class="fa fa-instagram"> </i>
+          </a>
+        
+      </ul>
+      <!-- Social buttons -->
+
+    </div>
+    <!-- Footer Elements -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3"> <a> Blog</a> por Hector Reinosa
+      
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+  <!-- Footer -->
   </body>
 </html>
