--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,36 +4,31 @@
         <h5> <%=link_to "Publicar Articulo", new_article_path, class:"btn btn-secondary"%></h5>
     </div>
 </div>
-    <% @articles.each do |article| %>
-<div class="container">
-   
-    <div >
-    <h3 class="title"><%=link_to article.title, article%> </h3>
-    </div>
-    
-     <%=article.content%><br>
-     
-     <% if article.comments.count >1 %>
-     <p class="btn btn-sm btn-secondary">  <%= article.comments.count%>  comentarios</p>
-     <% end %>
-    <% if article.comments.count ==1 %>
-     <p class="btn btn-sm btn-secondary">  <%= article.comments.count%>  comentario</p>
-     <% end %>
-     <% if article.comments.count ==0 %>
-     <p class="text-muted">  Este articulo no tiene comentarios aún, ¡sé el primero en comentar!</p>
-     <% end %>
-     
-     
-      
-     
 
-    </div>
-    
-    <br><hr><br>
-    <% end %>   
-</div>
+    <div class="container">
+        <div class="row">
+            <% @articles.each do |article| %>
+            
+                <div class="col-md-3" style="border:1px solid #BDD3DE;padding: 5px;">
+                    <h3 class="title"><%=link_to article.title, article%> </h3> 
+                    <p class="text-muted"> por <%= article.user.email%> </p>
+                    <hr>
+                    <% if article.comments.count >1 %>
+                        <p class="btn btn-sm btn-secondary">  <%= article.comments.count%>  comentarios</p>
+                    <% end %>
+                    <% if article.comments.count ==1 %>
+                        <p class="btn btn-sm btn-secondary">  <%= article.comments.count%>  comentario</p>
+                    <% end %>
+                    <% if article.comments.count ==0 %>
+                        <p class="text-muted">  Este articulo no tiene comentarios aún, ¡sé el primero en comentar!</p>
+                    <% end %>
 
-    
+                </div>
+            
+            <% end %>
+        </div>
+    </div>
+
 
 
 
