--- a/app/views/articles/myarticles.html.erb
+++ b/app/views/articles/myarticles.html.erb
@@ -3,23 +3,24 @@
      <h4 class="title"><i>Éstas son todas tus publicaciones</i></h4>
      <h5> <%=link_to "Publicar Articulo", new_article_path, class:"btn btn-secondary"%></h5>
 
+     <div class="list-group">
           <% @articles.each do |article| %>
-               <div >
+               <div class="list-group-item">
                     <h3 class="text-info"><%=link_to article.title, article%> </h3>
+                    <hr>
+                         <% if article.comments.count >1 %>
+                              <p class="btn btn-sm btn-secondary">  <%= article.comments.count%>  comentarios</p>
+                         <% end %>
+                         <% if article.comments.count ==1 %>
+                              <p class="btn btn-sm btn-secondary">  <%= article.comments.count%>  comentario</p>
+                         <% end %>
+                         <% if article.comments.count ==0 %>
+                              <p class="text-muted">  Este articulo no tiene comentarios aún</p>
+                         <% end %>
                </div>
-               <div>
-                    <%=article.content%><br>
-               </div>
-               <% if article.comments.count >1 %>
-     <p class="btn btn-sm btn-secondary">  <%= article.comments.count%>  comentarios</p>
-     <% end %>
-    <% if article.comments.count ==1 %>
-     <p class="btn btn-sm btn-secondary">  <%= article.comments.count%>  comentario</p>
-     <% end %>
-     <% if article.comments.count ==0 %>
-     <p class="text-muted">  Este articulo no tiene comentarios aún</p>
-     <% end %>
-               <br><hr><br>
-     
           <% end %>
+     </div >
+
+     
+          
 </div>
