--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
-<%# form_for crea un formulario para el parametro que se le pase %>
 <div class=" container col-md-10"> 
 <h3 class="text-info"> Nuevo articulo</h3>
+<%# Renderizando el formulario %>
 <%= render "form"%>
 </div>
