--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,5 @@
-<%=form_for(@article) do |f| %>
+<%=form_for(@article) do |f| %> 
+<%# Formulario para creacion de nuevos articulos %>
      <% @article.errors.full_messages.each do |message|%>
      <div class="alert-warning">
           Alert: <%= message%>
