--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
-<%# form_for crea un formulario para el parametro que se le pase %>
 <div class=" container col-md-10"> 
 <h3 class="text-info"> Editar articulo</h3>
+<%# Renderizando formulario para edicion de articulos %>
 <%= render "form"%>
 
 </div>
