--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,11 +8,12 @@
     <div class="container">
         <div class="row">
             <% @articles.each do |article| %>
-            
+                <%# Mostrando todos los articulos %>
                 <div class="col-md-12" style="border:1px solid #BDD3DE;padding: 5px;">
                     <h3 class="title"><%=link_to article.title, article%> </h3> 
                     <p class="text-muted"> por <%= article.user.email%> </p>
                     <hr>
+                    <%# Condicionales para mostrar el contador de comentarios %>
                     <% if article.comments.count >1 %>
                         <p class="text-muted">  <%= article.comments.count%>  comentarios</p>
                     <% end %>
