--- a/app/views/articles/myarticles.html.erb
+++ b/app/views/articles/myarticles.html.erb
@@ -5,6 +5,7 @@
 
      <div class="list-group">
           <% @articles.each do |article| %>
+          <%# Mostrando articulos de usuario en sesion %>
                <div class="list-group-item">
                     <h3 class="text-info"><%=link_to article.title, article%> </h3>
                     <hr>
