--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Comment</h1>
-
+<%# Formulario para nuevo comentario %>
 <%= render 'form', comment: @comment %>
 
 <%= link_to 'Back', comments_path %>
