--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,4 +1,5 @@
 <%- if controller_name != 'sessions' %>
+<%# Links de inicio de sesion o registro en caso que sean necesarios %>
   <%= link_to "Iniciar Sesion", new_session_path(resource_name) %><br />
 <% end -%>
 
